# fastapi-playground

./: Dockerfile  README.md  docker-compose.yml  graphql.py  index.py  model.py  pyproject.toml
